@startuml

title __CONTROLLER's Class Diagram__\n

  package com.example.apns.PushNotification {
    package com.example.apns.PushNotification.controller {
      class NotificationController {
          {static} - PUSH_TOPIC : String
          - apnsClient : ApnsClient
          - filePath : String
          + NotificationController()
          + sendNotification()
          + getNotifications()
          + updateNotificationStatus()
          + createDeviceDetails()
          + updateDeviceDetails()
          - getDeviceDetails()
          - buildClient()
          - notification()
          - captureDeviceDetails()
          - updateDevice()
          - saveNotification()
          + clearTokens()
          + clearExpiredNotifications()
          + setNotificationsAsExpired()
      }
    }
  }
  

  package com.example.apns.PushNotification {
    package com.example.apns.PushNotification.controller {
      class RemoteConfigController {
          + RemoteConfigController()
          + getRemoteActiveConfigs()
          + createRemoteConfig()
          + updateConfigStatus()
          - upsertRemoteConfig()
          - setConfigResponse()
      }
    }
  }
  

  NotificationController o-- DeviceRepository : deviceRepository
  NotificationController o-- NotificationRepository : notificationRepository
  NotificationController o-- InAppNotificationPriorityRepository : inAppNotificationPriorityRepository
  RemoteConfigController o-- RemoteConfigRepository : remoteConfigRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
